# IME_Indicator

./: .gitignore  Cargo.toml  komorebi-blacklist.txt  run-IME_Indicator.ps1
overlay_shared/: Cargo.toml
overlay_shared/src/: egui_overlay_runner.rs  egui_support.rs  lib.rs  windows_support.rs
overlay_status_bar/: Cargo.toml
overlay_status_bar/src/: main.rs
rust_indicator/: Cargo.toml  config.toml
rust_indicator/src/: caret_detector.rs  config.rs  egui_overlay_renderer.rs  event_listener.rs  ime_detector.rs  main.rs  overlay.rs  status_bar_overlay.rs  tray.rs
