[workspace]
members = [
    "rust_indicator",
    "overlay_shared",
    "overlay_status_bar",
]
resolver = "2"

[workspace.dependencies]
egui = "0.29.1"
egui_overlay = { version = "0.9.0", features = ["three_d"] }
egui_render_three_d = "0.9.0"
egui_window_glfw_passthrough = "0.9.0"
embed-resource = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_System_LibraryLoader",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Accessibility",
    "Win32_UI_Input_Ime",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_TextServices",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
opt-level = 3
lto = true
