[package]
name = "overlay_status_bar"
version = "0.1.0"
edition = "2024"

[dependencies]
egui.workspace = true
egui_overlay.workspace = true
egui_render_three_d.workspace = true
egui_window_glfw_passthrough.workspace = true
serde.workspace = true
serde_json.workspace = true
overlay_shared = { path = "../overlay_shared" }

[target.'cfg(target_os = "windows")'.dependencies]
windows.workspace = true
